Fixed blog post metadata layout on small screens

--- a/src/templates/assets/stylesheets/main/components/_post.scss
+++ b/src/templates/assets/stylesheets/main/components/_post.scss
@@ -165,6 +165,10 @@
     width: 100%;
     padding: 0;
 
+    .md-sidebar__scrollwrap {
+      overflow: visible;
+    }
+
     .md-sidebar__inner {
       padding: 0;
     }
@@ -191,6 +195,8 @@
 
     .md-nav {
       position: initial;
+      height: auto;
+      margin-bottom: 0;
     }
   }
 }
